fixed warning and fit the resume in one page

--- a/resume.tex
+++ b/resume.tex
@@ -37,8 +37,9 @@ An engineer with 2 years of experience, passionate about building robust softwar
 
 % Experience
 \section*{Experience}
-\textbf{DevOps Engineer} \\
-Travancore Analytics Pvt ltd. \ \hfill Sep 2023 – Present
+\begin{flushleft}
+\textbf{DevOps Engineer} \quad Travancore Analytics Pvt ltd. \hfill Sep 2023 – Present
+\end{flushleft}
 \begin{itemize}[leftmargin=0.25in, label=\textbullet]
     \item Built and optimized CI/CD pipelines (Jenkins, GitHub Actions) to automate software delivery, speeding up deployments and releases.
     \item Managed scalable cloud infrastructure (AWS, Azure) with Infrastructure as Code (CloudFormation) for consistent, secure environments.
